# delty-grpc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
delty_grpc/: __init__.py  track_content_difference_pb2.py  track_content_difference_pb2_grpc.py
delty_grpc/proto/: track_content_difference.proto
