[tool.poetry]
name = "delty-grpc"
version = "0.1.0"
description = ""
authors = ["dimitris orfanoudakis <dimitrisorfanuakis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.1.0"
types-setuptools = "^75.1.0.20240917"
types-protobuf = "^5.27.0.20240920"
grpc-stubs = "^1.53.0.5"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
mypy-protobuf = "^3.6.0"


[tool.poetry.group.dev.dependencies]
types-protobuf = "^5.27.0.20240920"
mypy-protobuf = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
